Fix the bug that the Live2D figure covered by licensing boxes
The Live2D figure at the right-bottom corner could be covered by article
licensing boxes for the ``z-index`` style property of the boxes was set
inappropriately.

--- a/include/style/article.styl
+++ b/include/style/article.styl
@@ -130,7 +130,7 @@ article
 
 .article-licensing
     position: relative
-    z-index: 1
+    z-index: auto
     box-shadow: none
     background: $white-ter
     border-radius: $radius
